<resources>
    <string name="app_name">ejercicio_02</string>
    <string name="login">Login</string>
    <string name="e_mail">E-mail</string>
    <string name="contrase_a">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="ejemplo123_email_com">ejemplo123@email.com</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="hola123">hola123</string>
    <string name="contrase_aA">Contraseña</string>
    <string name="ejemplo123">ejemplo123</string>
    <string name="ingresar">Ingresar</string>
    <string name="informaci_n_del_usuario">Información del Usuario</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
</resources>